--- a/src/App.css
+++ b/src/App.css
@@ -1,59 +1,68 @@
-body{
+body {
   background-color: #cfdfff;
 }
-
 .App {
-  font-family: 'Otomanopee One', sans-serif; 
+  font-family: "Luckiest Guy", cursive;
   font-size: 35pt;
   text-align: center;
   letter-spacing: 5pt;
 }
-
-.App img.start{
+.App img.start {
   max-width: 250px;
   cursor: pointer;
 }
-
-.App .Game{
-display:flex;
-letter-spacing:2pt;
-
+.App .Game {
+  display: flex;
+  letter-spacing: 2pt;
 }
-.App .Game .Player{
-flex-grow: 1;
-}
-.App .Game .Computer{
+.App .Game .Player {
   flex-grow: 1;
 }
-
-.App .Game .Computer img{
-  max-width: 250px;
+.App .Game .Computer {
+  flex-grow: 1;
 }
-
 .App .Game .Player span {
+  cursor: pointer;
   display: inline-block;
   text-align: center;
   font-size: 0.75em;
-  cursor: pointer;
 }
-
-.App .Game .Player img{
+.App .Game .Player img {
   max-width: 200px;
   margin: 0 15px 15px;
   display: block;
 }
-
 .App .Game .Player.selected img,
-.App .Game img{
+.App .Game img {
   max-width: 250px;
-  margin: auto
+  margin: auto;
 }
-
-
-
 .App pre {
   padding: 10px;
   text-align: left;
   font-size: 20pt;
   letter-spacing: normal;
+}
+.App .Results {
+  letter-spacing: normal;
+  font-size: 50pt;
+}
+.App .Results img {
+  display: block;
+  max-width: 100px;
+  cursor: pointer;
+  margin: auto;
+}
+.App input {
+  font-family: inherit;
+  font-size: 0.75em;
+  text-align: center;
+  width: 90%;
+  margin: 0 auto 25px;
+  padding: 10px;
+  line-height: 1;
+  background-color: #eef;
+  border: 2px solid #ccf;
+  border-radius: 5px;
+  display: block;
 }
